make simple call to check if we build retrofit without problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Corona Virus Tracking</string>
+    <string name="countries">Countries</string>
 </resources>
