designed country item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Corona Virus Tracking</string>
     <string name="countries">Countries</string>
+    <string name="country_name">Country Name</string>
+    <string name="total_cases">Total Cases:</string>
+    <string name="new_cases">New Cases:</string>
+    <string name="total_deaths">Total Deaths:</string>
+    <string name="new_deaths">New Deaths:</string>
+    <string name="total_recovered">Total Recovered:</string>
+    <string name="total_active_cases">Total Active Cases:</string>
 </resources>
